<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
  android:orientation="vertical"
  android:layout_width="fill_parent"
  android:layout_height="fill_parent"
  android:gravity="center_horizontal">


  <LinearLayout
    android:id="@+id/border"
    android:orientation="vertical"
    android:background="#CCC"
    android:layout_height="wrap_content"
    android:layout_width="fill_parent"
    android:paddingBottom="10dp">

    <TextView
      android:layout_width="fill_parent"
      android:layout_height="wrap_content"
      android:text="@string/query_hint"
      android:paddingTop="10dp"
      android:paddingLeft="5dp"
      android:paddingRight="5dp"
      android:textStyle="bold" />

    <EditText
      android:id="@+id/query_field"
      android:padding="5dp"
      android:layout_width="fill_parent"
      android:hint=""
      android:inputType="textNoSuggestions"
      android:layout_height="wrap_content"
      android:layout_marginLeft="5dp"
      android:layout_marginRight="5dp" />

  </LinearLayout>

  <LinearLayout
    android:orientation="vertical"
    android:background="#AAA"
    android:layout_height="1dp"
    android:layout_width="fill_parent"
    android:layout_marginBottom="25dp"/>


  <TextView
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:text="@string/startsWith_hint"
    android:paddingLeft="10dp"
    android:paddingRight="10dp" />

  <EditText
    android:id="@+id/startsWith_field"
    android:padding="5dp"
    android:layout_marginBottom="25dp"
    android:layout_width="fill_parent"
    android:inputType="textNoSuggestions"
    android:layout_height="wrap_content"
    android:layout_marginLeft="5dp"
    android:layout_marginRight="5dp" />

  <TextView
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:text="@string/containsExact_hint"
    android:paddingLeft="10dp"
    android:paddingRight="10dp" />

  <EditText
    android:id="@+id/containsExact_field"
    android:padding="5dp"
    android:layout_marginBottom="25dp"
    android:layout_width="fill_parent"
    android:inputType="textNoSuggestions"
    android:layout_height="wrap_content"
    android:layout_marginLeft="5dp"
    android:layout_marginRight="5dp" />


  <TextView
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:text="@string/endsWith_hint"
    android:paddingLeft="10dp"
    android:paddingRight="10dp" />

  <EditText
    android:id="@+id/endsWith_field"
    android:layout_marginBottom="25dp"
    android:layout_width="fill_parent"
    android:inputType="textNoSuggestions"
    android:layout_height="wrap_content"
    android:paddingLeft="10dp"
    android:paddingRight="10dp"
    android:layout_marginLeft="5dp"
    android:layout_marginRight="5dp" />

  <Button
    android:id="@+id/submit_form"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:layout_gravity="center_horizontal"
    android:text="@string/submit_text" />
</LinearLayout>

